@@ -14,6 +14,7 @@ Bugfixes
 Features
 --------
 
+* Add ``nikola theme --list-installed`` (Issue #2504)
 * Add Chinese (Traditional) ``zh_TW`` locale by Po-Wen Chi
 * Add ``KATEX_AUTO_RENDER`` setting to configure math delimiters
 * Update KaTeX version to 0.6.0: support aligned math display
